--- a/rregistration.html
+++ b/rregistration.html
@@ -20,7 +20,7 @@
 <td><input type="radio" name="gen" value="male">male
 <input type="radio" name="gen" value="female"><b>female</b></td></tr>
 <tr><td valign="top"><b>language known:*</b></td>
-<td><input type="checkbox" name="long" value="english">english<br>
+<td><input type="checkbox" name="long" value="tamil">tamil<br>
 <td><input type="checkbox" name="long" value="hindi">hindi<br>
 <td><input type="checkbox" name="long" value="telugu">telugu<br>
 </td></tr>
